kubernetes/manifests/glance/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-http-route
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: glance.k8s.nullservers.com
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: cilium-gateway-system
  hostnames:
  - "glance.k8s.nullservers.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: glance
      port: 80
